; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_symbols.c_FindModuleSymbols.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_symbols.c_FindModuleSymbols.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, i32, i64, %struct.TYPE_9__* }
%struct.TYPE_8__ = type { i32 }

@pdebug_module_head = common dso_local global %struct.TYPE_9__* null, align 8
@.str = private unnamed_addr constant [23 x i8] c"FindModuleSymbols(%x)\0A\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"pd: %x\0A\00", align 1
@.str.2 = private unnamed_addr constant [31 x i8] c"FindModuleSymbols(): %S %x-%x\0A\00", align 1
@.str.3 = private unnamed_addr constant [47 x i8] c"FindModuleSymbols(): address matches %S %x-%x\0A\00", align 1
@ulNumSymbolsLoaded = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [5 x i8] c"%S -\00", align 1
@apSymbols = common dso_local global %struct.TYPE_8__** null, align 8
@pdebug_module_tail = common dso_local global %struct.TYPE_9__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_8__* @FindModuleSymbols(i64 %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  store i64 %0, i64* %3, align 8
  %8 = load %struct.TYPE_9__*, %struct.TYPE_9__** @pdebug_module_head, align 8
  store %struct.TYPE_9__* %8, %struct.TYPE_9__** %7, align 8
  %9 = load i64, i64* %3, align 8
  %10 = trunc i64 %9 to i32
  %11 = call i32 @DPRINT(i32 %10)
  %12 = call i64 (...) @BuildModuleList()
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %105

14:                                               ; preds = %1
  store i64 0, i64* %6, align 8
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** @pdebug_module_head, align 8
  store %struct.TYPE_9__* %15, %struct.TYPE_9__** %7, align 8
  br label %16

16:                                               ; preds = %98, %14
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %18 = ptrtoint %struct.TYPE_9__* %17 to i32
  %19 = call i32 @DPRINT(i32 %18)
  %20 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %21 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %97

24:                                               ; preds = %16
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %26 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %25, i32 0, i32 2
  %27 = load i64, i64* %26, align 8
  store i64 %27, i64* %4, align 8
  %28 = load i64, i64* %4, align 8
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = add nsw i64 %28, %31
  store i64 %32, i64* %5, align 8
  %33 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %34 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  %36 = load i64, i64* %4, align 8
  %37 = load i64, i64* %5, align 8
  %38 = trunc i64 %37 to i32
  %39 = call i32 @DPRINT(i32 %38)
  %40 = load i64, i64* %3, align 8
  %41 = load i64, i64* %4, align 8
  %42 = icmp sge i64 %40, %41
  br i1 %42, label %43, label %96

43:                                               ; preds = %24
  %44 = load i64, i64* %3, align 8
  %45 = load i64, i64* %5, align 8
  %46 = icmp slt i64 %44, %45
  br i1 %46, label %47, label %96

47:                                               ; preds = %43
  %48 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %49 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 8
  %51 = load i64, i64* %4, align 8
  %52 = load i64, i64* %5, align 8
  %53 = trunc i64 %52 to i32
  %54 = call i32 @DPRINT(i32 %53)
  store i64 0, i64* %6, align 8
  br label %55

55:                                               ; preds = %92, %47
  %56 = load i64, i64* %6, align 8
  %57 = load i64, i64* @ulNumSymbolsLoaded, align 8
  %58 = icmp slt i64 %56, %57
  br i1 %58, label %59, label %95

59:                                               ; preds = %55
  %60 = load %struct.TYPE_8__**, %struct.TYPE_8__*** @apSymbols, align 8
  %61 = load i64, i64* %6, align 8
  %62 = getelementptr inbounds %struct.TYPE_8__*, %struct.TYPE_8__** %60, i64 %61
  %63 = load %struct.TYPE_8__*, %struct.TYPE_8__** %62, align 8
  %64 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %63, i32 0, i32 0
  %65 = load i32, i32* %64, align 4
  %66 = call i32 @DPRINT(i32 %65)
  %67 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %68 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %67, i32 0, i32 1
  %69 = load i32, i32* %68, align 8
  %70 = load %struct.TYPE_8__**, %struct.TYPE_8__*** @apSymbols, align 8
  %71 = load i64, i64* %6, align 8
  %72 = getelementptr inbounds %struct.TYPE_8__*, %struct.TYPE_8__** %70, i64 %71
  %73 = load %struct.TYPE_8__*, %struct.TYPE_8__** %72, align 8
  %74 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 4
  %76 = call i64 @PICE_wcsicmp(i32 %69, i32 %75)
  %77 = icmp eq i64 %76, 0
  br i1 %77, label %78, label %91

78:                                               ; preds = %59
  %79 = load %struct.TYPE_8__**, %struct.TYPE_8__*** @apSymbols, align 8
  %80 = load i64, i64* %6, align 8
  %81 = getelementptr inbounds %struct.TYPE_8__*, %struct.TYPE_8__** %79, i64 %80
  %82 = load %struct.TYPE_8__*, %struct.TYPE_8__** %81, align 8
  %83 = call i64 @ValidityCheckSymbols(%struct.TYPE_8__* %82)
  %84 = icmp ne i64 %83, 0
  br i1 %84, label %85, label %90

85:                                               ; preds = %78
  %86 = load %struct.TYPE_8__**, %struct.TYPE_8__*** @apSymbols, align 8
  %87 = load i64, i64* %6, align 8
  %88 = getelementptr inbounds %struct.TYPE_8__*, %struct.TYPE_8__** %86, i64 %87
  %89 = load %struct.TYPE_8__*, %struct.TYPE_8__** %88, align 8
  store %struct.TYPE_8__* %89, %struct.TYPE_8__** %2, align 8
  br label %106

90:                                               ; preds = %78
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %2, align 8
  br label %106

91:                                               ; preds = %59
  br label %92

92:                                               ; preds = %91
  %93 = load i64, i64* %6, align 8
  %94 = add nsw i64 %93, 1
  store i64 %94, i64* %6, align 8
  br label %55

95:                                               ; preds = %55
  br label %96

96:                                               ; preds = %95, %43, %24
  br label %97

97:                                               ; preds = %96, %16
  br label %98

98:                                               ; preds = %97
  %99 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %100 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %99, i32 0, i32 3
  %101 = load %struct.TYPE_9__*, %struct.TYPE_9__** %100, align 8
  store %struct.TYPE_9__* %101, %struct.TYPE_9__** %7, align 8
  %102 = load %struct.TYPE_9__*, %struct.TYPE_9__** @pdebug_module_tail, align 8
  %103 = icmp ne %struct.TYPE_9__* %101, %102
  br i1 %103, label %16, label %104

104:                                              ; preds = %98
  br label %105

105:                                              ; preds = %104, %1
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %2, align 8
  br label %106

106:                                              ; preds = %105, %90, %85
  %107 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  ret %struct.TYPE_8__* %107
}

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i64 @BuildModuleList(...) #1

declare dso_local i64 @PICE_wcsicmp(i32, i32) #1

declare dso_local i64 @ValidityCheckSymbols(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
